--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -41,4 +41,4 @@ jobs:
         with:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.lables }}
+          labels: ${{ steps.meta.outputs.labels }}
