--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -14,7 +14,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@4
+      - uses: actions/checkout@v4
       - name: 노드18
         uses: actions/setup-node@v4
         with:
@@ -24,20 +24,20 @@ jobs:
       - name: 앱 빌드
         run: npm run build
       - name: 이미지 레지스트리 로그인
-        uses: docker/login-action@3
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: 메타 데이터 설정
         id: meta
-        uses: docker/metadata-action@5
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/securechat/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}}
       - name: 이미지 빌드 & 푸쉬
-        uses: docker/build-push-action@5
+        uses: docker/build-push-action@v5
         with:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
