--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -39,6 +39,7 @@ jobs:
       - name: 이미지 빌드 & 푸쉬
         uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
