--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -36,6 +36,10 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/securechat/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: 이미지 빌드 & 푸쉬
         uses: docker/build-push-action@v5
         with:
@@ -43,3 +47,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: |
+            linux/amd64
+            linux/arm64/v8
